compiler/testData/diagnostics/testsWithStdLib/hugeUnresolvedKotlinxHtml.fir.kt
// RUN_PIPELINE_TILL: SOURCE
class A {
    fun bar() {
        <!UNRESOLVED_REFERENCE!>div<!> {
            <!UNRESOLVED_REFERENCE!>div<!> {
                <!UNRESOLVED_REFERENCE!>div<!> {
                    <!UNRESOLVED_REFERENCE!>div<!> {
                        <!UNRESOLVED_REFERENCE!>div<!> {
                            <!UNRESOLVED_REFERENCE!>div<!> {
                                <!UNRESOLVED_REFERENCE!>div<!> {
                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                    <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                        <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                            <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                                <!UNRESOLVED_REFERENCE!>div<!> {
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                    <!UNRESOLVED_REFERENCE!>+<!>(<!UNRESOLVED_REFERENCE!>foo<!> ?: "")
                                                                                                }
                                                                                            }
                                                                                        }
                                                                                    }
                                                                                }
                                                                            }
                                                                        }
                                                                    }
                                                                }
                                                            }
                                                        }

                                                    }
                                                }
                                            }
                                        }
                                    }
                                }
                            }
                        }
                    }
                }
            }
        }
    }
}
